Fixed bottom border radius which was not showing in the faetured image

--- a/src/style.scss
+++ b/src/style.scss
@@ -49,7 +49,7 @@ article {
 .featued-image {
   border-radius: 10px;
   width: 100%;
-  padding-bottom: 24px;
+  margin-bottom: 24px;
 }
 .content {
   padding-bottom: 24px;
